# url-metadata-collector

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/api_v1/endpoints/: metadata_endpoints.py
app/api/middlewares/: csp.py
app/api/v1/dependencies/: metadata.py
app/api/v1/endpoints/: metadata.py
app/core/: __init__.py  config.py
app/core/middlewares/: __init__.py  csp.py
app/db/: database.py  indexes.py
app/dependencies/: metadata.py
app/models/: __init__.py  metadata.py
app/repositories/: __init__.py  metadata.py  metadata_repository.py
app/services/: __init__.py  collector.py  metadata.py  metadata_service.py
app/workers/: __init__.py  metadata_worker.py
docs/: NOTES.md
tests/: locustfile.py  test_metadata_endpoints.py
