[project]
name = "url-metadata-collector"
version = "0.1.0"
description = "Collect page source & metadata from URLs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.135.2",
    "gunicorn==25.2.0",
    "httpx==0.28.1",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "pymongo==4.15.5",
    "redis==7.3.0",
    "uvicorn==0.43.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"